--- a/pages/login/yanzheng-mjh/yanzheng-mjh.html
+++ b/pages/login/yanzheng-mjh/yanzheng-mjh.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../../../css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="../../../css/public.css"/>
     <link rel="stylesheet" type="text/css" href="../../../css/index.css" />
-    <link rel="stylesheet" type="text/css" href="login_mjh.css" />
+    <link rel="stylesheet" type="text/css" href="yanzheng-mjh.css" />
 </head>
 <body>
     <div class="mjh-dl-wk">
@@ -20,28 +20,32 @@
             <!-- 头像 -->
             <div class="mjh-dl-tx" style="background:url(../../../images/yhp_images/yhp_loginheader.png) no-repeat center center/cover;"></div>
             <!-- 输入框 -->
-            <img src="../../../images/yhp_images/yhp_user.png" alt="" class="mjh-dl-yht" />
-            <img src="../../../images/yhp_images/yhp_pass.png" alt="" class="mjh-dl-mmt" />
-            <input type="text" class="mjh-dl-yhm" placeholder='请输入账号'/>
-            <input type="password" class="mjh-dl-mm" placeholder='请输入密码'/>
+            <img src="../../../images/yhp_images/mjh-yz_03.png" alt="" class="mjh-dl-sjt" />
+            <input type="text" class="mjh-dl-sjh" placeholder='请输入手机号'/>
+            <div class="mjh-dl-fsyz">
+                <div class="mjh-yz-d1"></div>
+                <div class="mjh-yz-d2"></div>
+                <div class="mjh-yz-dd">发送验证码</div>
+            </div>
+            <div class="mjh-dl-ddyz active">
+                <div class="mjh-yz-d1"></div>
+                <div class="mjh-yz-d2"></div>
+                <div class="mjh-yz-dd">33 "</div>
+                <div class="mjh-yz-d2"></div>
+                <div class="mjh-yz-d1"></div>
+            </div>
+            <input type="text" class="mjh-dl-yzm" placeholder='请输入验证码'/>
             <div class="mjh-dl-mmc">
                 <input type="checkbox"/>记住密码
                 <input type="button" value='找回密码'>
             </div>
-            <div class="mjh-sl-sub active" >  
+            <div class="mjh-sl-sub mjh-dl" >  
             </div>
             <!-- 错误提示 -->
             <div class="mjh-dl-ts">
                 <div class="mjh-ts-zs1"></div>
                 <div class="mjh-ts-zs2"></div>
-                <div class="mjh-ts-ts">当前密码不正确</div>
-                <div class="mjh-ts-zs2"></div>
-                <div class="mjh-ts-zs1"></div>
-            </div>
-            <div class="mjh-dl-ts1">
-                <div class="mjh-ts-zs1"></div>
-                <div class="mjh-ts-zs2"></div>
-                <div class="mjh-ts-ts1">当前用户名不从在</div>
+                <div class="mjh-ts-ts">当前号码不存在</div>
                 <div class="mjh-ts-zs2"></div>
                 <div class="mjh-ts-zs1"></div>
             </div>
@@ -52,21 +56,7 @@
                 <a href="##"><img src="../../../images/yhp_images/yhp_tweet.png" alt="" /></a>
                 <a href="##"><img src="../../../images/yhp_images/yhp_chat.png" alt="" /></a>
             </div>
-            <!-- 用户选择 -->
-            <div class="mjh-dl-yhxz">
-                <a href="##">
-                    <div><img src="../../../images/yhp_images/yhp_loginheader.png" alt="" /></div>
-                    <p>afg</p>
-                </a>
-                <a href="##">
-                    <div><img src="../../../images/yhp_images/yhp_loginheader.png" alt="" /></div>
-                    <p>afg</p>
-                </a>
-                <a href="##">
-                    <div><img src="../../../images/yhp_images/yhp_loginheader.png" alt="" /></div>
-                    <p>afg</p>
-                </a>
-            </div>
+            
 
         </div>
     </div>
@@ -77,4 +67,4 @@
 <script type="text/javascript" src="../../../js/touch.js"></script>
 <script type="text/javascript"src="../../../js/swiper-3.4.0.min.js"></script>
 <script type="text/javascript" src="../../../js/index.js"></script>
-<script type="text/javascript" src="login_mjh.js"></script>
+<script type="text/javascript" src="yanzheng-mjh.js"></script>
