--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script type="text/javascript" src="js/touch.js"></script>
 <script type="text/javascript" src="js/rem.js"></script>
 <script type="text/javascript" src="route.js"></script>
+<script type="text/javascript" src="directive/directive.js"></script>
 <script type="text/javascript" src="pages/home/home.js"></script>
 <script type="text/javascript" src="pages/shujia/shujia.js"></script>
 <script type="text/javascript" src="pages/shequ/shequ.js"></script>
