--- a/pages/shequ/shequ.html
+++ b/pages/shequ/shequ.html
@@ -2,7 +2,7 @@
     <div class="index_contain" ng-controller="shequ">
     <!-- 社区圈子开始 -->
         <!-- 圈子顶部栏开始 -->
-        <shequtopbar></shequtopbar>
+        <shequtopbar personurl="images/ld_images/ld_qz_photo.png" left="圈子" right="书友"></shequtopbar>
         <!-- 圈子顶部栏结束 -->
         <!-- 社会圈子下面内容开始 -->
         <div class="ld_qz_condi">
