--- a/pages/login/zlf_zhuce/zhuce.html
+++ b/pages/login/zlf_zhuce/zhuce.html
@@ -17,7 +17,7 @@
         <img src="../../../images/zlf_images/zlf_zc_29.png" alt="" class="zlf_dl_bg2" />
 
 
-        <!-- 02 基本信息 开始-->
+        <!-- 01 基本信息 开始-->
         <div class="zlf_xq_box">
              <div class="zlf_num">01</div>
              <div class="zlf_choose">
@@ -34,7 +34,7 @@
                  <li class="zlf_quan"></li>
              </ul>
              <!-- 输入框 开始-->
-             <div class="zlf_xb_choose">
+             <!-- <div class="zlf_xb_choose">
                  <div class="zlf_photo_choose">
                      <div class="zlf_photo">
                          <img src="../../../images/zlf_images/zlf_zc3_06.png" alt="" />
@@ -47,7 +47,43 @@
                  <div class="zlf_btn_box zlf_btn_box1">
                      <a href="#"><img src="../../../images/zlf_images/zlf_zc_22.png" alt="" /></a>
                  </div>
+             </div> -->
+             <div class="mjh-zc-srk">
+                <div class="mjh-zc-srnk active">
+                    <div class="mjh-srnk-d1"></div> 
+                    <div class="mjh-srnk-d2"></div> 
+                    <div class="mjh-srnk-d3">用户名</div>
+                    <input type="text" class="mjh-srnk-d4" />
+                    <img src="../../../images/mjh/mjh_zc_03.png" alt="" class="mjh-srnk-d5" />
+                </div>
+                <div class="mjh-zc-srnk">
+                    <div class="mjh-srnk-d1"></div> 
+                    <div class="mjh-srnk-d2"></div> 
+                    <div class="mjh-srnk-d3">手机号</div>
+                    <input type="text" class="mjh-srnk-d4" />
+                    <img src="../../../images/mjh/mjh_zc_07.gif" alt="" class="mjh-srnk-d5" />
+                </div>
+                <div class="mjh-zc-srnk">
+                    <div class="mjh-srnk-d1"></div> 
+                    <div class="mjh-srnk-d2"></div> 
+                    <div class="mjh-srnk-d3">密码</div>
+                    <input type="text" class="mjh-srnk-d4" />
+                    <img src="../../../images/mjh/mjh_zc_13.gif" alt="" class="mjh-srnk-d5" />
+                    <img src="../../../images/mjh/mjh_zc_11.gif" alt="" class="mjh-srnk-d5" />
+                </div>
+                <div class="mjh-zc-srnk">
+                    <div class="mjh-srnk-d1"></div> 
+                    <div class="mjh-srnk-d2"></div> 
+                    <div class="mjh-srnk-d3">确认</div>
+                    <input type="text" class="mjh-srnk-d4" />
+                    <img src="../../../images/mjh/mjh_zc_13.gif" alt="" class="mjh-srnk-d5" />
+                </div>
+                 <div class="zlf_btn_box zlf_btn_box1">
+                     <a href="#"><img src="../../../images/zlf_images/zlf_zc_22.png" alt="" /></a>
+                 </div>
              </div>
+             <!-- 错误提示 -->
+             <p class="mjh-zc-cwts">用户名被注册过啦~</p>
              <!-- 输入框 结束-->
         </div>
         <!-- 01 基本信息 结束-->
