--- a/pages/person/person.html
+++ b/pages/person/person.html
@@ -26,9 +26,19 @@
     			<div class="sy_header_img"></div>
     		</div>
     	</div>
+      <!-- 红心 -->
+        <div class="sy_heat">
+            <div class="sy_xin">
+                <img src="../../images/sy_images/sy_xin.png" alt="">
+            </div>
+            <span>2370</span>
+        </div>
     </div>
     <div class="sy_qmbox">
-    	<p>换个签名，换种心情~</p>
+    	<div class="sy_qmp">
+            <span>换个签名，换种心情~</span>
+            <div class="sy_dist"></div>
+        </div>
     	<div class="sy_xian_img"></div>
     	<div class="sy_five"></div>
     </div>
