--- a/pages/friend/friend.html
+++ b/pages/friend/friend.html
@@ -60,7 +60,7 @@
                 </li>
             </ul>    
             <ul class="sy_pluul swiper-slide">
-                <li class="sy_pluli swiper-slide">
+                <li class="sy_pluli">
                     <div class="sy_pluli_img">
                         <img src="../../images/sy_images/sy_mjh_2.png" alt="">
                     </div>
@@ -70,7 +70,7 @@
                         <span class="sy_san_dian">···</span>
                     </div>
                 </li>
-                <li class="sy_pluli swiper-slide">
+                <li class="sy_pluli">
                     <div class="sy_pluli_img">
                         <img src="../../images/sy_images/sy_mjh_2.png" alt="">
                     </div>
@@ -82,7 +82,7 @@
                 </li>
             </ul>
             <ul class="sy_pluul swiper-slide">
-                <li class="sy_pluli swiper-slide">
+                <li class="sy_pluli">
                     <div class="sy_pluli_img">
                         <img src="../../images/sy_images/sy_mjh_2.png" alt="">
                     </div>
@@ -92,7 +92,7 @@
                         <span class="sy_san_dian">···</span>
                     </div>
                 </li>
-                <li class="sy_pluli swiper-slide">
+                <li class="sy_pluli">
                     <div class="sy_pluli_img">
                         <img src="../../images/sy_images/sy_mjh_2.png" alt="">
                     </div>
@@ -104,7 +104,7 @@
                 </li>
             </ul>
             <ul class="sy_pluul swiper-slide">
-                <li class="sy_pluli swiper-slide">
+                <li class="sy_pluli">
                     <div class="sy_pluli_img">
                         <img src="../../images/sy_images/sy_mjh_2.png" alt="">
                     </div>
@@ -114,7 +114,7 @@
                         <span class="sy_san_dian">···</span>
                     </div>
                 </li>
-                <li class="sy_pluli swiper-slide">
+                <li class="sy_pluli">
                     <div class="sy_pluli_img">
                         <img src="../../images/sy_images/sy_mjh_2.png" alt="">
                     </div>
