--- a/pages/shujia/shujia.html
+++ b/pages/shujia/shujia.html
@@ -1,11 +1,7 @@
-
+    <!-- 书架顶部bar -->
+    <shequtopbar personurl="images/ld_images/ld_qz_photo.png" left="发现" right="收藏"></shequtopbar>
     <!-- 书架-发现 开始-->
-    <div class="zlf_container" hidden>
-        <!-- 头 开始 -->
-        <div class="zlf_top">
-            
-        </div>
-        <!-- 头 结束 -->
+    <div class="zlf_container">
         <!-- find 开始-->
         <div class="zlf_find">
             <div class="zlf_find_title">
@@ -17,15 +13,15 @@
         <!-- swiper 开始 -->
         <div class="swiper-container zlf_swiper-container">
           <div class="swiper-wrapper">
-            <div class="swiper-slide zlf_item">
+            <div class="swiper-slide zlf_item" ng-repeat="v in shujiafind track by $index">
                 <div class="zlf_cover">
-                    <img class="zlf_book1"src="images/zlf_images/zlf_book.png" alt="" />
+                    <img class="zlf_book1" src="{{v.bg}}" alt="" />
                     <!-- 头像 -->
                     <div class="zlf_photo">
-                        <img src="images/zlf_images/zlf_book.png">
+                        <img src="{{v.photo}}" alt="">
                     </div>
                     <!-- 姓名 -->
-                    <span class="zlf_name">JimGreen</span>
+                    <span class="zlf_name">{{v.name}}</span>
                     <!-- 点 -->
                     <div class="zlf_dian_box">
                         <img class="zlf_dian"src="images/zlf_images/zlf_dian.png" alt="" />
@@ -40,44 +36,42 @@
                     <!-- 火 -->
                     <div class="zlf_huo_box">
                         <img src="images/zlf_images/zlf_huo.png" alt="" />
-                        <i>388</i>
+                        <i>{{v.fire}}</i>
                     </div>
                 </div>
                 <div class="zlf_msg">
                     <div class="zlf_time_box">
                         <img class="zlf_time_tu" src="images/zlf_images/zlf_sj.png" alt="" />
-                        <span>2029</span>
+                        <span>{{v.time}}</span>
                     </div>
                     <div class="zlf_tuijian_box">
-                        <span class="zlf_span zlf_span1">GENTL</span>
-                        <span class="zlf_span zlf_span2">YTOUCH</span>
+                        <span class="zlf_span zlf_span1">{{v.title1}}</span>
+                        <span class="zlf_span zlf_span2">{{v.title2}}</span>
                         <img class="zlf_tuijian_tu" src="images/zlf_images/zlf_tuijian.png" alt="" />
                     </div>
                     <div class="zlf_line"></div>
-                    <p class="zlf_dec">
-                        卡就废了大家佛奥及覅偶将诶欧方佳偶的假发讲课了解放路看房卡大富科技...
-                    </p>
+                    <p class="zlf_dec">{{v.contain}}</p>
                     <div class="zlf_time_box">
                         <img class="zlf_time_tu" src="images/zlf_images/zlf_dizhi.png" alt="" />
-                        <span class="zlf_address">美国·纽约</span>
+                        <span class="zlf_address">{{v.location}}</span>
                     </div>
                     <div class="zlf_people zlf_people1">
-                        <img src="images/mjh/sy-mjh_54.png" alt="" />
+                        <img src="{{v.love1}}" alt="" />
                     </div>
                     <div class="zlf_people zlf_people2">
-                        <img src="images/mjh/sy-mjh_73.png" alt="" />
+                        <img src="{{v.love2}}" alt="" />
                     </div>
                      <div class="zlf_people zlf_people3">
-                        <img src="images/mjh/sy-mjh_54.png" alt="" />
+                        <img src="{{v.love1}}" alt="" />
                     </div>
                     <div class="zlf_people zlf_people4">
-                        <img src="images/mjh/sy-mjh_73.png" alt="" />
+                        <img src="{{v.love2}}" alt="" />
                     </div>
                     <div class="zlf_people zlf_people5">
-                        <img src="images/mjh/sy-mjh_54.png" alt="" />
+                        <img src="{{v.love1}}" alt="" />
                     </div>
                     <div class="zlf_people zlf_people6">
-                       +46
+                       {{v.sum}}
                     </div>
                 </div>
             </div>
@@ -88,133 +82,11 @@
     <!-- 书架-发现 结束-->
     <!-- 书架-收藏 开始-->
     <div class="zlf_container">
-        <div class="zlf_book_box">
-            <div class="zlf_book_item">
-                <div class="zlf_book">
-                    <img src="images/mjh/sy-mjh_27.png" alt="" />
-                    <div class="zlf_yuan zlf_yuan1"></div>
-                    <div class="zlf_yuan zlf_yuan2"></div>
-                </div>
-                <div class="zlf_book_msg">
-                    <div class="zlf_book_name">
-                        基督山伯爵
-                    </div>
-                    <div class="zlf_book_name2">
-                        THE COUNT OF MONTE CRISTO
-                    </div>
-                    <div class="zlf_wjx">
-                        <!-- 五角星 -->
-                        <div class="zlf_x_box">
-                            <img src="images/mjh/sy-mjh_31.png" alt="" />
-                            <img src="images/mjh/sy-mjh_31.png" alt="" />
-                            <img src="images/mjh/sy-mjh_31.png" alt="" />
-                            <img src="images/mjh/sy-mjh_31.png" alt="" />
-                        </div>
-                        <div class="zlf_author">
-                            DUMAS
-                        </div>
-                    </div>
-                    <div class="zlf_bg">
-                        <img class="zlf_bg_tu" src="images/zlf_images/zlf_bg.png" alt="" />
-                        <div class="zlf_sc">
-                            <img src="images/mjh/sy-mjh_35.png" height="19" width="20" alt="" />
-                        </div>
-                        <div class="zlf_gz">
-                            <img src="images/mjh/sy-mjh_38.png" height="19" width="20" alt="" />
-                            <span>23</span>
-                        </div>
-                        <div class="zlf_dz">
-                            <img src="images/mjh/sy-mjh_40.png" height="19" width="20" alt="" />
-                            <span>66</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="zlf_book_item">
-                <div class="zlf_book">
-                    <img src="images/mjh/sy-mjh_27.png" alt="" />
-                    <div class="zlf_yuan zlf_yuan1"></div>
-                    <div class="zlf_yuan zlf_yuan2"></div>
-                </div>
-                <div class="zlf_book_msg">
-                    <div class="zlf_book_name">
-                        基督山伯爵
-                    </div>
-                    <div class="zlf_book_name2">
-                        THE COUNT OF MONTE CRISTO
-                    </div>
-                    <div class="zlf_wjx">
-                        <!-- 五角星 -->
-                        <div class="zlf_x_box">
-                            <img src="images/mjh/sy-mjh_31.png" alt="" />
-                            <img src="images/mjh/sy-mjh_31.png" alt="" />
-                            <img src="images/mjh/sy-mjh_31.png" alt="" />
-                            <img src="images/mjh/sy-mjh_31.png" alt="" />
-                        </div>
-                        <div class="zlf_author">
-                            DUMAS
-                        </div>
-                    </div>
-                    <div class="zlf_bg">
-                        <img class="zlf_bg_tu" src="images/zlf_images/zlf_bg.png" alt="" />
-                        <div class="zlf_sc">
-                            <img src="images/mjh/sy-mjh_35.png" height="19" width="20" alt="" />
-                        </div>
-                        <div class="zlf_gz">
-                            <img src="images/mjh/sy-mjh_38.png" height="19" width="20" alt="" />
-                            <span>23</span>
-                        </div>
-                        <div class="zlf_dz">
-                            <img src="images/mjh/sy-mjh_40.png" height="19" width="20" alt="" />
-                            <span>66</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="zlf_book_item">
-                <div class="zlf_book">
-                    <img src="images/mjh/sy-mjh_27.png" alt="" />
-                    <div class="zlf_yuan zlf_yuan1"></div>
-                    <div class="zlf_yuan zlf_yuan2"></div>
-                </div>
-                <div class="zlf_book_msg">
-                    <div class="zlf_book_name">
-                        基督山伯爵
-                    </div>
-                    <div class="zlf_book_name2">
-                        THE COUNT OF MONTE CRISTO
-                    </div>
-                    <div class="zlf_wjx">
-                        <!-- 五角星 -->
-                        <div class="zlf_x_box">
-                            <img src="images/mjh/sy-mjh_31.png" alt="" />
-                            <img src="images/mjh/sy-mjh_31.png" alt="" />
-                            <img src="images/mjh/sy-mjh_31.png" alt="" />
-                            <img src="images/mjh/sy-mjh_31.png" alt="" />
-                        </div>
-                        <div class="zlf_author">
-                            DUMAS
-                        </div>
-                    </div>
-                    <div class="zlf_bg">
-                        <img class="zlf_bg_tu" src="images/zlf_images/zlf_bg.png" alt="" />
-                        <div class="zlf_sc">
-                            <img src="images/mjh/sy-mjh_35.png" height="19" width="20" alt="" />
-                        </div>
-                        <div class="zlf_gz">
-                            <img src="images/mjh/sy-mjh_38.png" height="19" width="20" alt="" />
-                            <span>23</span>
-                        </div>
-                        <div class="zlf_dz">
-                            <img src="images/mjh/sy-mjh_40.png" height="19" width="20" alt="" />
-                            <span>66</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="zlf_book_box" ng-controller="shujia">
+            <shujiabook ng-repeat="v in shujiashoucang track by $index"></shujiabook>
         </div>
         <!-- 想看新书了，逛逛看 -->
-        <div class="zlf_close_box">
+        <a href="#/" class="zlf_close_box">
             <div class="zlf_English">STACK_ROOM</div>
             <div class="zlf_Chinese">想看新书了，去逛逛看</div>
             <div class="zlf_close_btn">
@@ -223,6 +95,6 @@
             <div class="zlf_go">
                 <img src="images/zlf_images/zlf_go.png" alt="" />
             </div>
-        </div>
+        </a>
     </div>
     <!-- 书架-收藏 结束-->
