--- a/pages/shequ/shequ.html
+++ b/pages/shequ/shequ.html
@@ -42,19 +42,9 @@
                     <div class="ld_sy_btn"></div>
                 </div>
                 <div class="ld_sy_haoyou"><span>当前好友数量为</span><span class="ld_haoyou_num">235</span></div>
-                <div class="ld_sy_letter"><span>A.</span><span class="ld_sy_ltnum">34</span></div>
                 <div class="ld_friend_di">
-                    <!-- <div class="ld_friend">
-                        <div class="ld_friend_photo"><div class="ld_friend_inner"><img src="images/ld_images/ld_qz_photo.png" height="97" width="109" alt="" /></div></div>
-                        <ul class="ld_friend_con">
-                            <li class="ld_friend_tit">Aim·<b>Green</b><div class="ld_star"><span></span><span></span><span></span></div><i class="ld_vip">vip</i></li>
-                            <li>撸啊撸啊德玛西亚</li>
-                            <li class="ld_friend_zs"><i></i><b>TAIYUAN</b>SHANXI</li>
-                        </ul>
-                        <div class="ld_firend_rig ld_firend_huise"></div>
-                    </div> -->
                     <!-- 社区下面好友列表 -->
-                    <shequfriend></shequfriend>
+                    <shequletter></shequletter>
                     <ul class="ld_shuzi">
                         <li class="ld_shuzi_active">a</li>
                         <li>b</li>
