--- a/directive/public/friendqunlis.html
+++ b/directive/public/friendqunlis.html
@@ -1,5 +1,5 @@
 <!-- 社区下面好友列表 -->
-    <div class="ld_friend" ng-repeat="v in shequfriend track by $index">
+    <div class="ld_friend" ng-repeat="v in friendqunlis track by $index">
         <div class="ld_friend_photo">
             <a href="#/friend">
                 <div class="ld_friend_inner"><img src="images/ld_images/ld_qz_photo.png" height="97" width="109" alt="" /></div>
