--- a/directive/public/shequadd.html
+++ b/directive/public/shequadd.html
@@ -5,6 +5,6 @@
         <li class="ld_sy_addtit">{{v.title}}<span></span><span class="ld_sy_circle2"></span></li>
         <li>{{v.mes}}</li>
     </ul>
-    <div class="ld_sy_num ld_sy_numactive" ng-show="{{v.flag}}"><a href="{{v.myhref}}">02</a></div>
-    <div class="ld_sy_num" ng-hide="{{v.flag}}"><a href="{{v.myhref}}">&gt;</a></div>
+    <div class="ld_sy_num ld_sy_numactive" ng-show="{{v.flag}}"><a href="{{v.url}}">02</a></div>
+    <div class="ld_sy_num" ng-hide="{{v.flag}}"><a href="{{v.url}}">&gt;</a></div>
 </div>
