--- a/directive/public/shujiabook.html
+++ b/directive/public/shujiabook.html
@@ -1,5 +1,5 @@
 <!-- 书架收藏 书 -->
-<div class="zlf_book_item">
+<a class="zlf_book_item" href="{{v.url}}">
     <div class="zlf_book">
         <img src="{{v.fengmian}}" alt="" />
         <div class="zlf_yuan zlf_yuan1"></div>
@@ -34,4 +34,4 @@
             </div>
         </div>
     </div>
-</div>
+</a>
