--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" type="text/css" href="pages/shujia/shujia.css" />
     <link rel="stylesheet" type="text/css" href="pages/shequ/shequ.css" />
     <link rel="stylesheet" type="text/css" href="pages/zhanghu/zhanghu.css" />
+    <link rel="stylesheet" type="text/css" href="pages/me/me.css" />
+    <link rel="stylesheet" type="text/css" href="pages/show/show.css" />
+    <link rel="stylesheet" type="text/css" href="pages/bookcover/bookcover.css" />
+    <link rel="stylesheet" type="text/css" href="pages/friend/friend.css" />
 </head>
 <script type="text/javascript" src="js/angular.min.js"></script>
 <script type="text/javascript" src="js/angular-route.min.js"></script>
@@ -24,7 +28,13 @@
 <script type="text/javascript" src="pages/shujia/shujia.js"></script>
 <script type="text/javascript" src="pages/shequ/shequ.js"></script>
 <script type="text/javascript" src="pages/zhanghu/zhanghu.js"></script>
+<script type="text/javascript" src="pages/bookcover/bookcover.js"></script>
+<script type="text/javascript" src="pages/show/show.js"></script>
+<script type="text/javascript" src="pages/friend/friend.js"></script>
+<script type="text/javascript" src="pages/me/me.js"></script>
+<script type="text/javascript" src="pages/friendqun/friendqun.js"></script>
 <script type="text/javascript" src="index.js"></script>
+
 
 <body>
     <div ng-view></div>
@@ -47,6 +57,7 @@
             <p>账户</p>
         </a>
     </div>
+    <div class="footer"></div>
 </body>
 
 </html>
