--- a/pages/shequ/shequ.html
+++ b/pages/shequ/shequ.html
@@ -46,32 +46,8 @@
                     <!-- 社区下面好友列表 -->
                     <shequletter></shequletter>
                     <ul class="ld_shuzi">
-                        <li class="ld_shuzi_active">a</li>
-                        <li>b</li>
-                        <li>s</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
-                        <li>a</li>
+                        <!-- <li class="ld_shuzi_active">a</li> -->
+                        <li ng-repeat="l in letter track by $index">{{l}}</li>
                     </ul>
                 </div>
             </div>               
