--- a/directive/public/shequtopbar.html
+++ b/directive/public/shequtopbar.html
@@ -1,6 +1,6 @@
 <!-- 社区圈子 bar -->
 <div class="ld_sqtopbar" ng-controller="shequ">
-    <div class="ld_sq_photo"><img src="{{personurl}}" alt="" /></div>
+    <div class="ld_sq_photo"><a href="#/me"><img src="{{personurl}}" alt="" /></a></div>
     <ul class="ld_top_cen">
         <li ng-class="{true:'ld_sq_quanzi ld_top_active',false:'ld_sq_quanzi'}[!topFlag]" ng-click="changeQuanzi(true)"><div class="ld_qz_wenzi">{{left}}</div><span></span></li>
         <li ng-class="{true:'ld_sq_shuyou ld_top_active',false:'ld_sq_shuyou'}[topFlag]" ng-click="changeQuanzi(false)"><div class="ld_qz_wenzi">{{right}}</div></li>
